hphp/hack/test/typecheck/reactive/rx_superglobals2.php.exp
File "rx_superglobals2.php", line 5, characters 8-15:
Superglobal $_SERVER cannot be used in a reactive context. (Typing[4227])
